tests/ui/type/missing-let-in-binding-3.rs
struct A {
    : :u8, //~ ERROR expected identifier, found `:`
}

fn main() {}
